corpus/cpp/overload/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.cpp:5:5: error: [type_mismatch] no matching function for call to 'takes(int)'
want: int, int
got : int
via : void takes(int, int) @ src/main.cpp:1:6  +3 candidates
| src/main.cpp:5:5
|     takes(1);
|     ^
details: --formed-explain | raw: --formed-raw